--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+
+[*.yaml]
+indent_style = space
+indent_size = 2
