add integration tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,3 +37,16 @@ jobs:
         with:
           binary_path: dist/bfc
           binary_args: inputs/hello_world.bf --buffer-size 2 --dynamic-reallocation --json
+
+  tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v6
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+      - name: Run integration tests
+        run: make test
